--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -43,13 +43,14 @@
  base = #1e1e2e
  mantle = #181825
  crust = #11111b
- transparent = #FF00000
+ transparent = #000000ff
 
 background = #e21e1e2e
 background-alt = ${colors.mantle}
 foreground = ${colors.mauve}
 primary = ${colors.text}
 disabled = ${colors.overlay1}
+bar-bg = #55000000
 
 
 [bar/main]
@@ -61,26 +62,26 @@ offset-x = 0.5%
 offset-y = 6
 dpi = 110
 
-border-size = 1px
-border-color = ${colors.lavender}
+; border-size = 1px
+; border-color = ${colors.lavender}
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${colors.transparent}
+# foreground = ${colors.foreground}
 
 line-size = 3pt
-padding-left = 1
-padding-right = 1
+padding-left = 0
+padding-right = 0
 
-module-margin = 1
+module-margin = 0
 
-separator = "|"
-separator-foreground = ${colors.disabled}
+separator = ""
+sepaator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono Nerd Font:style=Bold:size=12;2
 
 modules-left = rofi-launcher date
-modules-center = xwindow
-modules-right = xworkspaces cpu pulseaudio mem
+modules-center = cpu mem pulseaudio
+modules-right = xwindow separator xworkspaces separator padding recorder i3-exit
 cursor-click = pointer
 cursor-scroll = default
 
@@ -91,10 +92,11 @@ override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
+format-background = ${colors.background}
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-foreground = ${colors.primary}
+; label-active-background = ${colors.background-alt}
+label-active-foreground = ${colors.lavender}
 label-active-underline= ${colors.lavender}
 label-active-padding = 1
 
@@ -112,6 +114,8 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
+format-background = ${colors.background}
+format-padding = 1
 label = %title:0:30:...%
 label-foreground = ${colors.primary}
 
@@ -119,36 +123,50 @@ label-foreground = ${colors.primary}
 type = internal/pulseaudio
 
 format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.yellow}
+format-volume-prefix-foreground = ${colors.mauve}
 format-volume = <label-volume>
+format-volume-background = ${colors.background}
+format-volume-padding = 1
 
 label-volume = %percentage%%
 
-label-muted = ""
-label-muted-foreground = ${colors.yellow}
-label-volume-foreground = ${colors.green}
+label-muted = " "
+label-muted-foreground = ${colors.disabled}
+label-muted-background = ${colors.background}
+label-muted-padding = 1
+label-volume-foreground = ${colors.text}
 
 [module/cpu]
 type = custom/script
 interval = 1
 exec = "emonitor-cli -c | awk '{print $2}'"
 format-prefix = " "
-format-prefix-foreground = ${colors.sky}
+format-prefix-foreground = ${colors.blue}
+format-background = ${colors.background}
+format-padding = 1
+
 label = %output%
-label-foreground = ${colors.blue}
+label-foreground = ${colors.text}
 
 [module/mem]
 type = custom/script
 interval = 1
 exec = "emonitor-cli -r | awk '{print $3}' | tr -d '(' | tr -d ')'"
 format-prefix = "  "
-format-prefix-foreground = ${colors.red}
+format-prefix-foreground = ${colors.green}
+format-background = ${colors.background}
+format-padding = 1
+
 label = %output%
-label-foreground = ${colors.pink}
+label-foreground = ${colors.text}
 
 [module/date]
 type = internal/date
 interval = 1
+
+format-background = ${colors.background}
+format-padding = 1
+
 
 date = "%A, %B %d %Y • %H:%M:%S"
 # date-alt = %Y-%m-%d %H:%M:%S
@@ -158,7 +176,49 @@ label-foreground = ${colors.primary}
 
 [module/rofi-launcher]
 type = custom/script
+
+format-background = ${colors.background}
+format-padding = 1
+
 exec = echo " "
 click-left = rofi -show drun
 label = %output%
-label-foreground = ${colors.lavender}
+label-foreground = ${colors.sky}
+
+[module/separator]
+type = custom/script
+
+exec = echo " "
+label = %output%
+label-foreground = ${colors.disabled}
+
+[module/i3-exit]
+type = custom/script
+
+format-background = ${colors.background}
+format-padding = 0
+
+exec = echo " "
+click-left = i3-msg exit
+label = %output%
+label-foreground = ${colors.red}
+
+[module/padding]
+type = custom/script
+
+format-background = ${colors.background}
+format-padding = 0
+
+exec = echo " "
+label = %output%
+
+[module/recorder]
+type = custom/script
+
+format-background = ${colors.background}
+format-padding = 0
+
+exec = echo "󰑊 "
+# click-left = i3-msg exit
+label = %output%
+label-foreground = ${colors.red}
