--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -25,7 +25,7 @@ shadow = false;
 
 #################################
 # Rounded corners
-# corner-radius = 10;
+corner-radius = 10;
 # round-borders = 5;
 # round-borders = 5;
 # rounded-corners-exclude = [ "window_type = 'dock'" ];
