--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -214,11 +214,12 @@ label = %output%
 
 [module/recorder]
 type = custom/script
+interval = 1
 
 format-background = ${colors.background}
 format-padding = 0
 
-exec = echo "󰑊 "
-# click-left = i3-msg exit
+exec = "python ~/.config/polybar/record-monitor.py ~/Movies/"
+click-left = "record ~/Movies/"
 label = %output%
 label-foreground = ${colors.red}
