--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -50,27 +50,28 @@ background-alt = ${colors.mantle}
 foreground = ${colors.mauve}
 primary = ${colors.text}
 disabled = ${colors.overlay1}
-bar-bg = #55000000
+bar-bg = #20ffffff
 
 
 [bar/main]
-width = 99%
+width = 100%
 height = 28
 bottom = false
 
-offset-x = 0.5%
-offset-y = 6
+; offset-x = 0.5%
+; offset-y = 6
 dpi = 110
 
-; border-size = 1px
-; border-color = ${colors.lavender}
+border-size = 5px
+border-color = ${colors.bar-bg}
 
-background = ${colors.transparent}
-# foreground = ${colors.foreground}
+background = ${colors.bar-bg}
+; foreground = ${colors.foreground}
 
-line-size = 3pt
+; line-size = 3pt
 padding-left = 0
 padding-right = 0
+padding = 2
 
 module-margin = 0
 
@@ -79,9 +80,9 @@ sepaator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono Nerd Font:style=Bold:size=12;2
 
-modules-left = rofi-launcher date
-modules-center = cpu mem pulseaudio
-modules-right = xwindow separator xworkspaces separator padding recorder i3-exit
+modules-left = rofi-launcher separator xworkspaces separator xwindow
+modules-center = cpu mem battery pulseaudio
+modules-right = date separator padding recorder i3-restart i3-exit
 cursor-click = pointer
 cursor-scroll = default
 
@@ -152,11 +153,20 @@ label-foreground = ${colors.text}
 type = custom/script
 interval = 1
 exec = "emonitor-cli -r | awk '{print $3}' | tr -d '(' | tr -d ')'"
-format-prefix = "  "
+format-prefix = " "
 format-prefix-foreground = ${colors.green}
 format-background = ${colors.background}
 format-padding = 1
+label-foreground = ${colors.text}
 
+[module/battery]
+type = custom/script
+interval = 1
+exec = "~/.config/polybar/termux-battery"
+format-prefix = " "
+format-prefix-foreground = ${colors.peach}
+format-background = ${colors.background}
+format-padding = 1
 label = %output%
 label-foreground = ${colors.text}
 
@@ -168,8 +178,9 @@ format-background = ${colors.background}
 format-padding = 1
 
 
-date = "%A, %B %d %Y • %H:%M:%S"
-# date-alt = %Y-%m-%d %H:%M:%S
+date = "%H:%M"
+; date = "%A, %B %d %Y • %H:%M:%S"
+date-alt = "%A, %B %d %Y • %H:%M:%S"
 
 label = %date%
 label-foreground = ${colors.primary}
@@ -221,5 +232,16 @@ format-padding = 0
 
 exec = "python ~/.config/polybar/record-monitor.py ~/Movies/"
 click-left = "record ~/Movies/"
+label = %output%
+label-foreground = ${colors.red}
+
+[module/i3-restart]
+type = custom/script
+
+format-background = ${colors.background}
+format-padding = 0
+
+exec = echo " "
+click-left = "i3-msg restart"
 label = %output%
 label-foreground = ${colors.red}
