--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -15,9 +15,9 @@ detect-client-opacity = true;
 #################################
 # Fading
 fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-fade-delta = 5;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
+fade-delta = 10;
 
 #################################
 # Shadows
@@ -25,8 +25,8 @@ shadow = false;
 
 #################################
 # Rounded corners
-corner-radius = 10;
+corner-radius = 15;
 # round-borders = 5;
 # round-borders = 5;
-# rounded-corners-exclude = [ "window_type = 'dock'" ];
+rounded-corners-exclude = [ "window_type = 'dock'" ];
 
