--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -50,28 +50,22 @@ background-alt = ${colors.mantle}
 foreground = ${colors.mauve}
 primary = ${colors.text}
 disabled = ${colors.overlay1}
-bar-bg = #20ffffff
-
+bar-bg = #10ffffff
 
 [bar/main]
 width = 100%
 height = 28
 bottom = false
 
-; offset-x = 0.5%
-; offset-y = 6
 dpi = 110
 
 border-size = 5px
 border-color = ${colors.bar-bg}
 
 background = ${colors.bar-bg}
-; foreground = ${colors.foreground}
-
-; line-size = 3pt
+line-size = 3pt
 padding-left = 0
 padding-right = 0
-padding = 2
 
 module-margin = 0
 
@@ -82,7 +76,7 @@ font-0 = JetBrainsMono Nerd Font:style=Bold:size=12;2
 
 modules-left = rofi-launcher separator xworkspaces separator xwindow
 modules-center = cpu mem battery pulseaudio
-modules-right = date separator padding recorder i3-restart i3-exit
+modules-right = date separator wlan separator padding recorder i3-restart i3-exit
 cursor-click = pointer
 cursor-scroll = default
 
@@ -96,12 +90,13 @@ type = internal/xworkspaces
 format-background = ${colors.background}
 
 label-active = %name%
-; label-active-background = ${colors.background-alt}
-label-active-foreground = ${colors.lavender}
-label-active-underline= ${colors.lavender}
-label-active-padding = 1
+; label-active-background = ${colors.overlay0}
+label-active-foreground = ${colors.yellow}
+; label-active-underline= ${colors.text}
+label-active-padding = 2
 
 label-occupied = %name%
+; label-occupied-background = ${colors.base}
 label-occupied-foreground = ${colors.primary}
 label-occupied-padding = 1
 
@@ -170,6 +165,16 @@ format-padding = 1
 label = %output%
 label-foreground = ${colors.text}
 
+[module/wlan]
+type = custom/script
+interval = 3
+exec = "~/.config/polybar/termux-wlan"
+
+format-background = ${colors.background}
+format-padding = 1
+label = %output%
+label-foreground = ${colors.mauve}
+
 [module/date]
 type = internal/date
 interval = 1
@@ -190,11 +195,10 @@ type = custom/script
 
 format-background = ${colors.background}
 format-padding = 1
-
 exec = echo " "
 click-left = rofi -show drun
 label = %output%
-label-foreground = ${colors.sky}
+label-foreground = ${colors.blue}
 
 [module/separator]
 type = custom/script
