--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -50,7 +50,7 @@ background-alt = ${colors.mantle}
 foreground = ${colors.mauve}
 primary = ${colors.text}
 disabled = ${colors.overlay1}
-bar-bg = #10ffffff
+bar-bg = #07ffffff
 
 [bar/main]
 width = 100%
@@ -75,8 +75,8 @@ sepaator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono Nerd Font:style=Bold:size=12;2
 
 modules-left = rofi-launcher separator xworkspaces separator xwindow
-modules-center = cpu mem battery pulseaudio
-modules-right = date separator wlan separator padding recorder i3-restart i3-exit
+modules-center = cpu mem battery
+modules-right = date separator padding wlan pulseaudio separator padding recorder i3-restart i3-exit
 cursor-click = pointer
 cursor-scroll = default
 
@@ -171,7 +171,7 @@ interval = 3
 exec = "~/.config/polybar/termux-wlan"
 
 format-background = ${colors.background}
-format-padding = 1
+format-padding = 0
 label = %output%
 label-foreground = ${colors.mauve}
 
