--- a/i3/config
+++ b/i3/config
@@ -1,177 +1,187 @@
-# WARNING
-# WARNING: This configuration file is a template for the i3-config-wizard to
-# WARNING: generate a config which uses keysyms in your current layout. It does
-# WARNING: not get loaded by i3. Please do not change it.
-# WARNING
-
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
+#
 
-# Init
-set $mod Mod1
-floating_modifier $mod
-tiling_drag modifier titlebar
 font pango:monospace 8
 
-# Volume
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym $mod+Control+Up   exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@   +10%   && $refresh_i3status
-bindsym $mod+Control+Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@   -10%   && $refresh_i3status
-bindsym $mod+m            exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@   toggle && $refresh_i3status
-bindsym $mod+Control+m    exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Power
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exit
-
-###
-# Apps
-###
-
 # Auto Start
-exec_always --no-startup-id "xrdb -merge ~/.Xresources"
-exec_always --no-startup-id ~/.config/i3/wallpaper-launch
-exec_always --no-startup-id ~/.config/i3/polybar-launch
-exec_always --no-startup-id picom
-exec_always --no-startup-id pulseaudio --start
+# Xresources
+exec_always --no-startup-id xrdb -merge "$HOME/.Xresources"
+exec_always --no-startup-id feh --bg-scale "$HOME/.wallpaper/bars.jpg"
+exec_always --no-startup-id "killall -q polybar; polybar"
+exec_always --no-startup-id "picom"
 
-# Shortcut
-bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+d      exec --no-startup-id rofi -show drun
-bindsym $mod+t      exec thunar
+exec_always --no-startup-id "xfce4-screensaver"
 
-# Screenshot
-bindsym           F12        exec --no-startup-id "scrot $HOME/Pictures/%Y-%m-%d-%H%M%S.png"
+# Apps
+bindsym Mod1+Return exec --no-startup-id i3-sensible-terminal
+bindsym Mod1+d exec --no-startup-id "~/.config/rofi/launch/launch"
+bindsym Mod1+m exec --no-startup-id "~/.config/rofi/powermenu/powermenu"
+bindsym F12 exec --no-startup-id "scrot $HOME/Pictures/%Y-%m-%d-%H%M%S.png"
 bindsym --release Shift+F12 exec --no-startup-id "scrot -s $HOME/Pictures/%Y-%m-%d-%H%M%S.png"
 
-# Ricing Tools
-bindsym $mod+F1           exec --no-startup-id "python $HOME/.local/opt/TogglePy/main.py"
-bindsym $mod+bracketright exec --no-startup-id "~/.config/i3/swalch next"
-bindsym $mod+bracketleft  exec --no-startup-id "~/.config/i3/swalch prev"
+# Vomule
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
-###
-# Window
-###
+# Movement
+# arrows
+set $up l
+set $down k
+set $left j
+set $right semicolon
 
-# Kill
-bindsym $mod+Shift+q kill window
+# hold Alt and drag to move/size windpw
+floating_modifier Mod1
+tiling_drag modifier titlebar
 
-# Focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+# change focus
+bindsym Mod1+$left focus left
+bindsym Mod1+$down focus down
+bindsym Mod1+$up focus up
+bindsym Mod1+$right focus right
+# bindsym Mod1+Left focus left
+# bindsym Mod1+Down focus down
+# bindsym Mod1+Up focus up
+# bindsym Mod1+Right focus right
 
-# Move
-bindsym $mod+Shift+Left  move left
-bindsym $mod+Shift+Down  move down
-bindsym $mod+Shift+Up    move up
-bindsym $mod+Shift+Right move right
-bindsym $mod+Shift+h     move left
-bindsym $mod+Shift+j     move down
-bindsym $mod+Shift+k     move up
-bindsym $mod+Shift+l     move right
+# move focused window
+bindsym Mod1+Shift+$left move left
+bindsym Mod1+Shift+$down move down
+bindsym Mod1+Shift+$up move up
+bindsym Mod1+Shift+$right move right
+bindsym Mod1+Shift+Left move left
+bindsym Mod1+Shift+Down move down
+bindsym Mod1+Shift+Up move up
+bindsym Mod1+Shift+Right move right
 
-# Layout
-bindsym $mod+e layout toggle split
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+# split in horizontal orientation
+bindsym Mod1+h split h
+# split in vertical orientation
+bindsym Mod1+v split v
 
-bindsym $mod+f           fullscreen toggle
-bindsym $mod+Shift+space floating   toggle
+# enter fullscreen mode for the focused container
+bindsym Mod1+f fullscreen toggle
 
-# Resize
-bindsym $mod+r mode "resize"
+# change container layout (stacked, tabbed, toggle split)
+bindsym Mod1+s layout stacking
+bindsym Mod1+w layout tabbed
+bindsym Mod1+e layout toggle split
+
+# toggle tiling / floating
+bindsym Mod1+Shift+space floating toggle
+
+# change focus between tiling / floating windows
+bindsym Mod1+space focus mode_toggle
+
+# focus the parent container
+bindsym Mod1+a focus parent
+
+# focus the child container
+#bindsym Mod1+d focus child
+
+# move the currently focused window to the scratchpad
+bindsym Mod1+Shift+minus move scratchpad
+
+# Show the next scratchpad window or hide the focused scratchpad window.
+# If there are multiple scratchpad windows, this command cycles through them.
+bindsym Mod1+minus scratchpad show
+
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+# switch to workspace
+bindsym Mod1+1 workspace number $ws1
+bindsym Mod1+2 workspace number $ws2
+bindsym Mod1+3 workspace number $ws3
+bindsym Mod1+4 workspace number $ws4
+bindsym Mod1+5 workspace number $ws5
+bindsym Mod1+6 workspace number $ws6
+bindsym Mod1+7 workspace number $ws7
+bindsym Mod1+8 workspace number $ws8
+bindsym Mod1+9 workspace number $ws9
+bindsym Mod1+0 workspace number $ws10
+# move focused container to workspace
+bindsym Mod1+Shift+1 move container to workspace number $ws1
+bindsym Mod1+Shift+2 move container to workspace number $ws2
+bindsym Mod1+Shift+3 move container to workspace number $ws3
+bindsym Mod1+Shift+4 move container to workspace number $ws4
+bindsym Mod1+Shift+5 move container to workspace number $ws5
+bindsym Mod1+Shift+6 move container to workspace number $ws6
+bindsym Mod1+Shift+7 move container to workspace number $ws7
+bindsym Mod1+Shift+8 move container to workspace number $ws8
+bindsym Mod1+Shift+9 move container to workspace number $ws9
+bindsym Mod1+Shift+0 move container to workspace number $ws10
+
+# reload the configuration file
+bindsym Mod1+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym Mod1+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# kill focused window
+bindsym Mod1+Shift+q kill
+
+# resize window (you can also use the mouse for that)
 mode "resize" {
-        bindsym e resize shrink width  10 px or 10 ppt
-        bindsym s resize grow   height 10 px or 10 ppt
-        bindsym w resize shrink height 10 px or 10 ppt
-        bindsym f resize grow   width  10 px or 10 ppt
+        bindsym $left       resize shrink width 10 px or 10 ppt
+        bindsym $down       resize grow height 10 px or 10 ppt
+        bindsym $up         resize shrink height 10 px or 10 ppt
+        bindsym $right      resize grow width 10 px or 10 ppt
 
-        bindsym Left  resize shrink width  10 px or 10 ppt
-        bindsym Down  resize grow   height 10 px or 10 ppt
-        bindsym Up    resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow   width  10 px or 10 ppt
+        bindsym Left        resize shrink width 10 px or 10 ppt
+        bindsym Down        resize grow height 10 px or 10 ppt
+        bindsym Up          resize shrink height 10 px or 10 ppt
+        bindsym Right       resize grow width 10 px or 10 ppt
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+        bindsym Mod1+r mode "default"
 }
 
-###
-# workspace
-###
+bindsym Mod1+r mode "resize"
 
-set $ws1  "1"
-set $ws2  "2"
-set $ws3  "3"
-set $ws4  "4"
-set $ws5  "5"
-set $ws6  "6"
-set $ws7  "7"
-set $ws8  "8"
-set $ws9  "9"
-set $ws10 "10"
-bindcode $mod+10 workspace number $ws1
-bindcode $mod+11 workspace number $ws2
-bindcode $mod+12 workspace number $ws3
-bindcode $mod+13 workspace number $ws4
-bindcode $mod+14 workspace number $ws5
-bindcode $mod+15 workspace number $ws6
-bindcode $mod+16 workspace number $ws7
-bindcode $mod+17 workspace number $ws8
-bindcode $mod+18 workspace number $ws9
-bindcode $mod+19 workspace number $ws10
-bindcode $mod+Shift+10 move container to workspace number $ws1
-bindcode $mod+Shift+11 move container to workspace number $ws2
-bindcode $mod+Shift+12 move container to workspace number $ws3
-bindcode $mod+Shift+13 move container to workspace number $ws4
-bindcode $mod+Shift+14 move container to workspace number $ws5
-bindcode $mod+Shift+15 move container to workspace number $ws6
-bindcode $mod+Shift+16 move container to workspace number $ws7
-bindcode $mod+Shift+17 move container to workspace number $ws8
-bindcode $mod+Shift+18 move container to workspace number $ws9
-bindcode $mod+Shift+19 move container to workspace number $ws10
-
-# bindsym $mod+Control+Left  workspace prev
-# bindsym $mod+Control+Right workspace next
-# bindsym $mod+Control+Home move container workspace prev
-# bindsym $mod+Control+End move container workspace next
-
-###
-# Styles, Theme
-###
-
-# Catppuccin Colors
+# Rice
+# colors
 set $rosewater #f5e0dc
-set $flamingo  #f2cdcd
-set $pink      #f5c2e7
-set $mauve     #cba6f7
-set $red       #f38ba8
-set $maroon    #eba0ac
-set $peach     #fab387
-set $yellow    #f9e2af
-set $green     #a6e3a1
-set $teal      #94e2d5
-set $sky       #89dceb
-set $sapphire  #74c7ec
-set $blue      #89b4fa
-set $lavender  #b4befe
-set $text      #cdd6f4
-set $subtext1  #bac2de
-set $subtext0  #a6adc8
-set $overlay2  #9399b2
-set $overlay1  #7f849c
-set $overlay0  #6c7086
-set $surface2  #585b7
-
-# Window Style
-for_window [class=".*"] border pixel 0
-# default_border none
-# new_window pixeL 0
-# new_float pixel 0
+set $flamingo #f2cdcd
+set $pink #f5c2e7
+set $mauve #cba6f7
+set $red #f38ba8
+set $maroon #eba0ac
+set $peach #fab387
+set $yellow #f9e2af
+set $green #a6e3a1
+set $teal #94e2d5
+set $sky #89dceb
+set $sapphire #74c7ec
+set $blue #89b4fa
+set $lavender #b4befe
+set $text #cdd6f4
+set $subtext1 #bac2de
+set $subtext0 #a6adc8
+set $overlay2 #9399b2
+set $overlay1 #7f849c
+set $overlay0 #6c7086
+set $surface2 #585b70
+set $surface1 #45475a
+set $surface0 #313244
+set $base #1e1e2e
+set $mantle #181825
+set $crust #11111b
 
 # target                 title     bg    text   indicator  border
 client.focused           $lavender $base $text  $rosewater $lavender
@@ -181,8 +191,26 @@ client.urgent            $peach    $base $peach $overlay0  $peach
 client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
 client.background        $base
 
-# Gaps
-gaps inner  5
-gaps outer  0
-gaps top    22
-# gaps bottom 22
+# bar {
+#   colors {
+#     background         $base
+#     statusline         $text
+#     focused_statusline $text
+#     focused_separator  $base
+#
+#     # target           border bg        text
+#     focused_workspace  $base  $mauve    $crust
+#     active_workspace   $base  $surface2 $text
+#     inactive_workspace $base  $base     $text
+#     urgent_workspace   $base  $red      $crust
+#   }
+# }
+
+# outline
+default_border pixel 1
+for_window [class="^.*"] border pixel 1
+
+# gaps
+gaps inner 5
+gaps outer 2
+gaps bottom 28
