--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -43,209 +43,115 @@
  base = #1e1e2e
  mantle = #181825
  crust = #11111b
- transparent = #000000ff
-
-background = #e21e1e2e
-background-alt = ${colors.mantle}
-foreground = ${colors.mauve}
-primary = ${colors.text}
-disabled = ${colors.overlay1}
-bar-bg = #07ffffff
+ transparent = #00ffffff
 
 [bar/main]
 width = 100%
-height = 28
-bottom = false
+height = 24pt
+radius = 10
+bottom = true
 
 dpi = 110
 
-border-size = 5px
-border-color = ${colors.bar-bg}
+background = ${colors.base}
+foreground = ${colors.text}
 
-background = ${colors.bar-bg}
 line-size = 3pt
+
+border-size = 4pt
+border-color = #00000000
+
 padding-left = 0
-padding-right = 0
+padding-right = 1
 
-module-margin = 0
+module-margin = 1
 
-separator = ""
-sepaator-foreground = ${colors.disabled}
+separator = •
+separator-foreground = ${colors.overlay1}
 
-font-0 = JetBrainsMono Nerd Font:style=Bold:size=12;2
+font-0 = JetBrainsMonoNL Nerd Font:size=12;2
 
-modules-left = rofi-launcher separator xworkspaces separator xwindow
-modules-center = cpu mem battery
-modules-right = date separator padding wlan pulseaudio separator padding recorder i3-restart i3-exit
+modules-left = xworkspaces xwindow
+modules-right = pulseaudio date
+
 cursor-click = pointer
-cursor-scroll = default
+cursor-scroll = ns-resize
 
 enable-ipc = true
+
+; wm-restack = generic
+; wm-restack = bspwm
 wm-restack = i3
 
 override-redirect = true
 
+; This module is not active by default (to enable it, add it to one of the
+; modules-* list above).
+; Please note that only a single tray can exist at any time. If you launch
+; multiple bars with this module, only a single one will show it, the others
+; will produce a warning. Which bar gets the module is timing dependent and can
+; be quite random.
+; For more information, see the documentation page for this module:
+; https://polybar.readthedocs.io/en/stable/user/modules/tray.html
+[module/systray]
+type = internal/tray
+
+format-margin = 8pt
+tray-spacing = 16pt
+
 [module/xworkspaces]
 type = internal/xworkspaces
-format-background = ${colors.background}
 
 label-active = %name%
-; label-active-background = ${colors.overlay0}
-label-active-foreground = ${colors.yellow}
-; label-active-underline= ${colors.text}
-label-active-padding = 2
+label-active-background = ${colors.crust}
+label-active-underline= ${colors.mauve}
+label-active-padding = 1
 
 label-occupied = %name%
-; label-occupied-background = ${colors.base}
-label-occupied-foreground = ${colors.primary}
 label-occupied-padding = 1
 
 label-urgent = %name%
-label-urgent-foreground = ${colors.primary}
+label-urgent-background = ${colors.base}
 label-urgent-padding = 1
+# export XCURSOR_THEME=catppuccin-mocha-mauve-cursors
 
 label-empty = %name%
-label-empty-foreground = ${colors.primary}
+label-empty-foreground = ${colors.crust}
 label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-format-background = ${colors.background}
-format-padding = 1
 label = %title:0:30:...%
-label-foreground = ${colors.primary}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.mauve}
+format-volume-prefix = "󰕾 "
+format-volume-prefix-foreground = ${colors.lavender}
 format-volume = <label-volume>
-format-volume-background = ${colors.background}
-format-volume-padding = 1
 
 label-volume = %percentage%%
 
-label-muted = " "
-label-muted-foreground = ${colors.disabled}
-label-muted-background = ${colors.background}
-label-muted-padding = 1
-label-volume-foreground = ${colors.text}
-
-[module/cpu]
-type = custom/script
-interval = 1
-exec = "emonitor-cli -c | awk '{print $2}'"
-format-prefix = " "
-format-prefix-foreground = ${colors.blue}
-format-background = ${colors.background}
-format-padding = 1
-
-label = %output%
-label-foreground = ${colors.text}
-
-[module/mem]
-type = custom/script
-interval = 1
-exec = "emonitor-cli -r | awk '{print $3}' | tr -d '(' | tr -d ')'"
-format-prefix = " "
-format-prefix-foreground = ${colors.green}
-format-background = ${colors.background}
-format-padding = 1
-label-foreground = ${colors.text}
-
-[module/battery]
-type = custom/script
-interval = 1
-exec = "~/.config/polybar/termux-battery"
-format-prefix = " "
-format-prefix-foreground = ${colors.peach}
-format-background = ${colors.background}
-format-padding = 1
-label = %output%
-label-foreground = ${colors.text}
-
-[module/wlan]
-type = custom/script
-interval = 3
-exec = "~/.config/polybar/termux-wlan"
-
-format-background = ${colors.background}
-format-padding = 0
-label = %output%
-label-foreground = ${colors.mauve}
+label-muted = "󰝟 "
+label-muted-foreground = ${colors.lavender}
 
 [module/date]
 type = internal/date
 interval = 1
 
-format-background = ${colors.background}
-format-padding = 1
+date = %H:%M
+date-alt = %Y-%m-%d %H:%M:%S
 
-
-date = "%H:%M"
-; date = "%A, %B %d %Y • %H:%M:%S"
-date-alt = "%A, %B %d %Y • %H:%M:%S"
+format-prefix = " "
+format-prefix-foreground = ${colors.lavender}
 
 label = %date%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.text}
 
-[module/rofi-launcher]
-type = custom/script
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
 
-format-background = ${colors.background}
-format-padding = 1
-exec = echo " "
-click-left = rofi -show drun
-label = %output%
-label-foreground = ${colors.blue}
+; vim:ft=dosini
 
-[module/separator]
-type = custom/script
 
-exec = echo " "
-label = %output%
-label-foreground = ${colors.disabled}
-
-[module/i3-exit]
-type = custom/script
-
-format-background = ${colors.background}
-format-padding = 0
-
-exec = echo " "
-click-left = i3-msg exit
-label = %output%
-label-foreground = ${colors.red}
-
-[module/padding]
-type = custom/script
-
-format-background = ${colors.background}
-format-padding = 0
-
-exec = echo " "
-label = %output%
-
-[module/recorder]
-type = custom/script
-interval = 1
-
-format-background = ${colors.background}
-format-padding = 0
-
-exec = "python ~/.config/polybar/record-monitor.py ~/Movies/"
-click-left = "record ~/Movies/"
-label = %output%
-label-foreground = ${colors.red}
-
-[module/i3-restart]
-type = custom/script
-
-format-background = ${colors.background}
-format-padding = 0
-
-exec = echo " "
-click-left = "i3-msg restart"
-label = %output%
-label-foreground = ${colors.red}
