--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -48,31 +48,33 @@
 [bar/main]
 width = 100%
 height = 24pt
-radius = 10
-bottom = true
+; offset-x = 15%
+bottom = false
 
-dpi = 110
+dpi = 144
 
 background = ${colors.base}
 foreground = ${colors.text}
 
 line-size = 3pt
 
-border-size = 4pt
+# border-size = 4pt
+# radius = 10
 border-color = #00000000
 
 padding-left = 0
-padding-right = 1
+padding-right = 0
 
-module-margin = 1
+module-margin = 0
 
-separator = •
-separator-foreground = ${colors.overlay1}
+# separator = •
+# separator-foreground = ${colors.overlay1}
 
 font-0 = JetBrainsMonoNL Nerd Font:size=12;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio date
+modules-right = padding pulseaudio padding date padding time padding
+# modules-center = xworkspaces xwindow  air  padding pulseaudio padding date padding
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -81,9 +83,9 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-wm-restack = i3
+# wm-restack = i3
 
-override-redirect = true
+# override-redirect = true
 
 ; This module is not active by default (to enable it, add it to one of the
 ; modules-* list above).
@@ -108,12 +110,12 @@ label-active-underline= ${colors.mauve}
 label-active-padding = 1
 
 label-occupied = %name%
+label-occupied-background = ${colors.base}
 label-occupied-padding = 1
 
 label-urgent = %name%
 label-urgent-background = ${colors.base}
 label-urgent-padding = 1
-# export XCURSOR_THEME=catppuccin-mocha-mauve-cursors
 
 label-empty = %name%
 label-empty-foreground = ${colors.crust}
@@ -121,10 +123,13 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label-background = ${colors.base}
+label = " %title:0:30:...% "
+# padding-right = 5
 
 [module/pulseaudio]
 type = internal/pulseaudio
+format-volume-background = ${colors.base}
 
 format-volume-prefix = "󰕾 "
 format-volume-prefix-foreground = ${colors.lavender}
@@ -134,19 +139,52 @@ label-volume = %percentage%%
 
 label-muted = "󰝟 "
 label-muted-foreground = ${colors.lavender}
+label-muted-background = ${colors.base}     
+
+[module/time]
+type = internal/date
+interval = 1
+
+date = %H:%M
+date-alt = %H:%M:%S
+
+format-prefix = " "
+format-prefix-foreground = ${colors.lavender}
+format-background = ${colors.base}
+
+label = %date%
+label-foreground = ${colors.text}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = "%a %d %b %Y"
+# date-alt = %Y-%m-%d %H:%M:%S
 
-format-prefix = " "
+format-prefix = "󰃭 "
 format-prefix-foreground = ${colors.lavender}
+format-background = ${colors.base}
 
 label = %date%
 label-foreground = ${colors.text}
+
+
+[module/padding]
+type = custom/script
+exec = echo ' '
+# interval = 5
+format = <label>
+format-background = ${colors.base}
+label = %output%
+
+[module/air]
+type = custom/script
+exec = echo ' '
+# interval = 5
+format = <label>
+format-background = ${colors.transparent}
+label = %output%
 
 [settings]
 screenchange-reload = true
