--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -20,8 +20,8 @@
 #
 # Range: 0.0 - 1.0
 # Default: 0.75
-# shadow-opacity = .75
-
+# shadow-opacity = .
+#
 # The left offset for shadows, in pixels.
 #
 # Default: -15
@@ -41,7 +41,7 @@
 # currently implemented using the X RandR extension.
 #
 # Default: false
-# crop-shadow-to-monitor = false
+# crop-shadow-to-monitor = true
 
 
 #################################
@@ -79,6 +79,9 @@ fade-out-step = 0.03;
 # Range: 0.1 - 1.0
 # Default: 1.0 (disabled)
 frame-opacity = 0.7;
+inactive-opacity = 0.9;
+active-opacity = 1.0;
+frame-opacity = 0.9;
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 #
@@ -94,7 +97,12 @@ frame-opacity = 0.7;
 # `transparent-clipping`.
 #
 # Default: 0 (disabled)
-# corner-radius = 15
+corner-radius = 15
+
+rounded-corners-exclude = [
+  "window_type = 'dock'"
+  # "class_g = 'xfce4-screensaver'"
+]
 
 #################################
 #            Blur               #
@@ -282,32 +290,32 @@ use-damage = false;
 # Rule-based per-window options.
 #
 # See WINDOW RULES section in the man page for how these work.
-rules: ({
-  match = "window_type = 'tooltip'";
-  fade = false;
-  shadow = true;
-  opacity = 0.75;
-  full-shadow = false;
-}, {
-  match = "window_type = 'dock'    || "
-          "window_type = 'desktop' || "
-          "_GTK_FRAME_EXTENTS@";
-  blur-background = false;
-}, {
-  match = "window_type != 'dock'";
-  # shader = "my_shader.frag";
-}, {
-  match = "window_type = 'dock' || "
-          "window_type = 'desktop'";
-  corner-radius = 0;
-}, {
-  match = "name = 'Notification'   || "
-          "class_g = 'Conky'       || "
-          "class_g ?= 'Notify-osd' || "
-          "class_g = 'Cairo-clock' || "
-          "_GTK_FRAME_EXTENTS@";
-  shadow = false;
-})
+# rules: ({
+#   match = "window_type = 'tooltip'";
+#   fade = false;
+#   shadow = true;
+#   opacity = 0.75;
+#   full-shadow = false;
+# }, {
+#   match = "window_type = 'dock'    || "
+#           "window_type = 'desktop' || "
+#           "_GTK_FRAME_EXTENTS@";
+#   blur-background = false;
+# }, {
+#   match = "window_type != 'dock'";
+#   # shader = "my_shader.frag";
+# }, {
+#   match = "window_type = 'dock' || "
+#           "window_type = 'desktop'";
+#   corner-radius = 0;
+# }, {
+#   match = "name = 'Notification'   || "
+#           "class_g = 'Conky'       || "
+#           "class_g ?= 'Notify-osd' || "
+#           "class_g = 'Cairo-clock' || "
+#           "_GTK_FRAME_EXTENTS@";
+#   shadow = false;
+# })
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
